# FTSPlotter

./: README.md  pyproject.toml  requirements.txt
ftsplotter/: __init__.py  ftsplot.py
ftsplotter/atlas/: moore_linecenters.npy  moore_linenames.npy
