[build-system]
requires = ['setuptools >= 61.0']
build-backend = 'setuptools.build_meta'

[project]
name = "FTSPlotter"
version = "1"
dependencies = [
    'numpy',
    'scipy',
    'tqdm',
    'matplotlib',
    'setuptools',
    'adjusttext'
]
authors = [
    {name = 'Sean G. Sellers', email = 'sean.g.sellers@gmail.com'}
]
maintainers = [
    {name = 'Sean G. Sellers', email='sean.g.sellers@gmail.com'}
]
description = "FTS Atlas plotting statements"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT License"}

[project.urls]
repository = "https://github.com/sgsellers/FTSPlotter"

[tool.setuptools.package-data]
"ftsplotter.atlas" = ["**"]
